# big-data-pipeline-Le-groupe

./: README.md  docker-compose.yml  pyproject.toml
ML-Analysis/: MLClustering_Analysis.py  ML_Report.ipynb  Predicting_modeling.py
analysis/: spark_data_analysis.ipynb
analysis/spark_analysis/: top_spenders.csv
app/: Dockerfile  MLClustering_Analysis.py  Predicting_modeling.py  data_processing.py  ingestion.py  main.py  query_mongo.py  requirements.txt  spark_analysis.py
data/: ecommerce_data_with_trends_small.csv
exploratory-data-analysis/: eda.ipynb
hadoop_config/: hdfs-site.xml
scripts/: populate-hdfs.sh  start-hdfs.sh
