[project]
name = "big-data-pipeline-group4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pyspark>=3.5.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
]
